# shemaless_serializers_benchmark

./: .gitignore  CMakeLists.txt
benchmark/: CMakeLists.txt
benchmark/seastar/: CMakeLists.txt  seastar_test.cpp
benchmark/serializer/: CMakeLists.txt  ComplexObject.h
benchmark/serializer/flexbuffers/: BechmarkFlexbuffers.cpp  Flexbufers_features  SFBSerializer.h  TestFlexbuffersAPI.cpp  builder.cpp  flex_utils.h
benchmark/serializer/ion/: BenchmarkION.cpp
benchmark/serializer/libcbor/: BenchmarkCBOR.cpp  CBORSerializer.h
benchmark/serializer/mpack/: BenchmarkMPack.cpp  MPackSerializer.h  TestMsgPackBuilder.cpp
benchmark/serializer/msgpack_c/: MsgPackSerializer.h
benchmark/serializer/tinycbor/: BenchmarkCBOR.cpp  CBORSerializer.h  TestTinyCBORBuilder.cpp
benchmark/serializer/velocypack/: BenchmarkVelocyBuilder.cpp  TestBuilder.cpp  VelocySerializer.h  builder.cpp
include/: CMakeLists.txt
include/benchmark/: CMakeLists.txt
include/flatbuffers/: CMakeLists.txt
include/flatbuffers/include/flatbuffers/: flatbuffers.h  flexbuffers.h
include/libcbor/src/: libcbor.pc
include/libcbor/src/cbor/: configuration.h
include/mpack/: CMakeLists.txt
include/mpack/projects/vs/: mpack.vcxproj
include/velocypack/: CMakeLists.txt
